<resources>
    <string name="app_name">Vaasa Weather</string>
    <string name="tab_text_1">Varoitukset</string>
    <string name="tab_text_2">Lämpötila</string>
    <string name="tab_text_3">Meren data</string>
    <string name="tab_text_4"><![CDATA[Asetukset & info]]></string>
    <string name="fragment1_title">Aktiiviset varoitukset:</string>
    <string name="fragment2_title">Lämpödata:</string>
    <string name="fragment2_temp_title"><u><b>Päivän lämpötila</b></u></string>
    <string name="fragment2_temp_current">Tämänhetkinen:</string>
    <string name="fragment2_temp_highest">Päivän korkein:</string>
    <string name="fragment2_temp_lowest">Päivän matalin:</string>
    <string name="fragment3_title">Meridata:</string>
    <string name="fragment3_sealevel_title"><u><b>Veden korkeus</b></u></string>
    <string name="fragment3_seatemp_title"><u><b>Veden lämpötila</b></u></string>
    <string name="fragment4_title"><![CDATA[Asetukset & info:]]></string>
    <string name="updateBtn">Päivitä</string>
    <string name="warnings_switch_left">Vaasa/Pohjanmaa</string>
    <string name="warnings_switch_right">Koko maa</string>
    <string name="notificationSwitch_left">Ilmoitukset pois</string>
    <string name="notificationSwitch_right">Ilmoitukset päällä</string>
    <string name="nightmodeSwitch_left">Yötila pois</string>
    <string name="nightmodeSwitch_right">Yötila päällä</string>
    <string name="Notification_info">Sovellus voi halutessasi ilmoittaa sinulle joka päivä aamuviideltä ennen töihin lähtöä, mikäli yöllä on ollut pakkasta ja tiet voivat olla jäässä. Voit kytkeä ominaisuuden päälle/pois alla olevasta kytkimestä.</string>
    <string name="Graph_info">Muistathan, että sovelluksen erilaisia taulukkoja on mahdollista zoomata kahdella sormella lähemmäs ja kauemmas. Taulukon eri kohtia voi myös klikata, saadakseen tarkempaa tietoa sen hetken arvosta. Taulukon saa helposti takaisin oletusasentoonsa painamalla "päivitä" -nappia.</string>
    <string name="info_main">Tämän sovelluksen on kehittänyt <b>Jasper Honkasalo</b> ilmaiseksi Vaasalaisille. Ja miksei muillekin!\n<b>Voit halutessasi kannustaa vastaavien ilmaisten sovellusten kehitystä esimerkiksi lahjoittamalla jollakin alla olevista tavoista :)</b></string>
    <string name="info_kofi"><b>Ko-fi:</b>\nhttps://ko-fi.com/japsu</string>
    <string name="info_paypal"><b>Paypal:</b>\njapsu.honkasalo@gmail.com</string>
    <string name="info_btc"><b>Bitcoin:</b>\n3NMsa1gt7vuD1AEkpjyeJkhwWsyxCHX97u</string>
    <string name="info_faq_title">FAQ:</string>
    <string name="info_faq_1">Minulla on hieno uusi idea tai parannus sovellukseesi!</string>
    <string name="info_faq_1_answer">-Katsotaan mitä voin tehdä asian eteen! Voit ottaa minuun yhteyttä joko edellämainitusta sähköpostiosoitteesta, tai painaa oikeassa alanurkassa olevaa kirjeen kuvaa!</string>
    <string name="info_faq_2">Mistä sovelluksen käyttämä data ja tieto tulee?</string>
    <string name="info_faq_2_answer">-Ilmatieteenlaitoksen avoimesta datasta, jota kuka vain sovelluskehittäjä saa käyttää!</string>
    <string name="info_faq_3">Miten voin raportoida mahdollisesta bugista tai virheestä?</string>
    <string name="info_faq_3_answer">-Paina oikeassa alanurkassa olevaa kirjeenkuvaa, tämä avaa palautelomakkeen!</string>
    <string name="info_faq_4">Miksi sovelluksen data vaikuttaa aina olevan hieman jäljessä?</string>
    <string name="info_faq_4_answer">Datassa käytetään UTC aikaa. Se poikkeaa kesäaikana kolme tuntia ja normaaliaikana eli ns. talviaikana 2 tuntia. Esimerkiksi 6 UTC on siis Suomen aikaa kesällä 9 ja talvella 8.</string>
    <string name="info_faq_5">Mistä voin itse löytää lisätietoa Ilmatieteenlaitoksen avoimesta datasta?</string>
    <string name="info_faq_5_answer">https://www.ilmatieteenlaitos.fi/kysymyksia-avoimesta-datasta</string>
    <string name="appwidget_text">Haetaan\ndataa…</string>
    <string name="add_widget">Lämpötila</string>
    <string name="tempWidgetBtn">Päivitä</string>
</resources>