<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/fragment4_title"
        android:textColor="?attr/colorOnBackground"
        android:textSize="30sp"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Notification_info"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationSwitch_left"
            android:padding="10dp">
        </TextView>
        <Switch
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationSwitch_right"
            android:padding="10dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nightmodeSwitch_left"
            android:padding="10dp">
        </TextView>
        <Switch
            android:id="@+id/nightmodeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nightmodeSwitch_right"
            android:padding="10dp">
        </TextView>
    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/linear_custom_border">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_main"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp">
            </TextView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_kofi"
                android:autoLink="web"
                android:clickable="true"
                android:textIsSelectable="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:focusable="true">
            </TextView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_paypal"
                android:autoLink="email"
                android:clickable="true"
                android:textIsSelectable="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:focusable="true">
            </TextView>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_btc"
                android:textIsSelectable="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">
            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:paddingTop="35dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/info_faq_title"
                    android:textStyle="bold"
                    android:paddingBottom="10dp">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/linear_custom_border_thin">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:text="@string/info_faq_1"
                        android:textStyle="italic">
                    </TextView>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:text="@string/info_faq_1_answer"
                        android:textStyle="bold"
                        android:paddingBottom="10dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/linear_custom_border_thin">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:text="@string/info_faq_2"
                        android:textStyle="italic">
                    </TextView>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:text="@string/info_faq_2_answer"
                        android:textStyle="bold"
                        android:paddingBottom="10dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/linear_custom_border_thin">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:text="@string/info_faq_3"
                        android:textStyle="italic">
                    </TextView>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:text="@string/info_faq_3_answer"
                        android:textStyle="bold"
                        android:paddingBottom="10dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/linear_custom_border_thin">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:text="@string/info_faq_4"
                        android:textStyle="italic">
                    </TextView>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:text="@string/info_faq_4_answer"
                        android:textStyle="bold"
                        android:paddingBottom="10dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/linear_custom_border_thin">
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:text="@string/info_faq_5"
                        android:textStyle="italic">
                    </TextView>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:text="@string/info_faq_5_answer"
                        android:autoLink="web"
                        android:clickable="true"
                        android:textIsSelectable="true"
                        android:textStyle="bold"
                        android:paddingBottom="10dp"
                        android:focusable="true">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

<!--LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:background="@drawable/linear_custom_border_thin">

</LinearLayout-->